--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_root"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/base_bg"
@@ -10,20 +10,23 @@
         android:id="@+id/ll"
         layout="@layout/include_navi" />
 
-
-    <sysu.zyb.panellistlibrary.PanelListLayout
-        android:id="@+id/id_pl_root"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sw_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_10">
 
-        <ListView
-            android:id="@+id/id_lv_content"
+        <com.app.feng.fixtablelayout.FixTableLayout
+            android:id="@+id/fixTableLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fastScrollEnabled="false"
-            android:overScrollMode="never" />
-
-    </sysu.zyb.panellistlibrary.PanelListLayout>
-
+            app:fixtable_divider_color="@color/colorPrimary"
+            app:fixtable_divider_height="1px"
+            app:fixtable_item_gravity="CENTER"
+            app:fixtable_item_top_bottom_padding="8dp"
+            app:fixtable_item_width="100dp"
+            app:fixtable_show_left_view_shadow="true"
+            app:fixtable_title_color="#C5CDEF" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
