--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -9,6 +9,12 @@
     <include
         android:id="@+id/ll"
         layout="@layout/include_navi" />
+    <HorizontalScrollView
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </HorizontalScrollView>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sw_refresh"
