--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/base_bg"
@@ -9,10 +8,10 @@
     <include
         android:id="@+id/ll"
         layout="@layout/include_navi" />
-    <HorizontalScrollView
+    <!--<HorizontalScrollView
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent">-->
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/sw_refresh"
@@ -22,10 +21,12 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rc_view"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </HorizontalScrollView>
+    <!--</HorizontalScrollView>-->
 
 </LinearLayout>
