--- a/app/src/main/res/layout/item_table_content.xml
+++ b/app/src/main/res/layout/item_table_content.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/tv_id"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/tv_name"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
@@ -23,76 +23,76 @@
     <TextView
         android:id="@+id/tv_id_card"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="150dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_plate_num"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
-    <TextView
+    <!--<TextView
         android:id="@+id/tv_image"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
-        android:layout_height="45dp"/>
-    <!--<ImageView
+        android:layout_height="45dp"/>-->
+    <ImageView
         android:id="@+id/iv"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:layout_width="120dp"
-        android:layout_height="45dp"/>-->
+        android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_score"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_type"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_tel"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_date"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_break_type"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_break_place"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_fee"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>
