--- a/app/src/main/res/layout/item_table_content.xml
+++ b/app/src/main/res/layout/item_table_content.xml
@@ -25,7 +25,7 @@
         android:textColor="@color/base_color_text_black"
         android:textSize="14sp"
         android:gravity="center_vertical"
-        android:layout_width="150dp"
+        android:layout_width="160dp"
         android:layout_height="45dp"/>
     <TextView
         android:id="@+id/tv_plate_num"
@@ -41,12 +41,15 @@
         android:gravity="center_vertical"
         android:layout_width="120dp"
         android:layout_height="45dp"/>-->
-    <ImageView
-        android:id="@+id/iv"
-        android:textColor="@color/base_color_text_black"
-        android:textSize="14sp"
+    <FrameLayout
         android:layout_width="120dp"
-        android:layout_height="45dp"/>
+        android:layout_height="45dp">
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
+
     <TextView
         android:id="@+id/tv_score"
         android:textColor="@color/base_color_text_black"
