register with id card

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,6 +33,25 @@
             android:background="@mipmap/base_horization_line" />
 
         <EditText
+            android:id="@+id/et_idCard"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/height_title"
+            android:background="@color/transparent"
+            android:drawableLeft="@mipmap/login_icon_account"
+            android:drawablePadding="25dip"
+            android:hint="@string/login_idCard"
+            android:paddingLeft="15dip"
+            android:shadowDx="0.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="1.0"
+            android:textColorHint="#ffdddddd" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@mipmap/base_horization_line" />
+
+        <EditText
             android:id="@+id/et_password"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/height_title"
