show image and initNaviView

--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -79,9 +79,10 @@
 
 
             <ImageView
+                android:paddingLeft="15dip"
                 android:id="@+id/iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="200dp"
+                android:layout_height="150dp" />
 
             <View
                 android:layout_width="match_parent"
